--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "jest": "29.1.2"
   },
   "keywords": [],
-  "author": "",
+  "author": "xesam",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/miniapp-develop/view-support/issues"
